# go_firestore_filtering

./: .gitignore  AUTHORS  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  io_bazel_rules_go.pull.3083.patch
filterstore/: BUILD.bazel  filterstore.go  filterstore_test.go
tools/: gopackagesdriver.sh
