load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
# gazelle:prefix github.com/kagadar/go_firestore_filtering
# gazelle:resolve go github.com/kagadar/go_proto_expression/genproto/options @com_github_kagadar_go_proto_expression//genproto/options
gazelle(name = "gazelle")

nogo(
    name = "nogo",
    vet = True,
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
)
